kubernetes/apps/grafana/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: grafana
  namespace: monitoring

spec:
  selector:
    app: grafana

  ports:
    - port: 3000
      targetPort: 3000
