kubernetes/apps/grafana/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana-ingress
  namespace: monitoring

spec:
  ingressClassName: traefik

  rules:
    - host: grafana.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: grafana
                port:
                  number: 3000
